force-app/main/default/objects/PurchaseOrderLineItem__c/PurchaseOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>PurchaseOrderLineItem</label>
    <nameField>
        <displayFormat>POI-{0000}</displayFormat>
        <label>PurchaseOrderLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>