force-app/main/default/objects/PurchaseOrderLineItem__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <label>PurchaseOrder</label>
    <referenceTo>PurchaseOrder__c</referenceTo>
    <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
    <relationshipName>PurchaseOrderLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>