force-app/main/default/objects/PurchaseOrderLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOrder__c</columns>
    <columns>Units__c</columns>
    <columns>Price__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>